Updated utc implementation and tests